--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-google-autocomplete": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.1"
   },
