--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-google-autocomplete": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.1",
+    "vuetify-google-autocomplete": "^2.0.0-beta.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
