--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-facebook-signin-button": "^1.0.1",
     "vue-google-autocomplete": "^1.1.0",
+    "vue-google-signin-button": "^1.0.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.1",
+    "vuetify-google-autocomplete": "^2.0.0-beta.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
