--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
+    "lintfix": "eslint --ext .js,.vue src test/unit/specs --fix",
+    "l": "eslint --help",
     "build": "node build/build.js",
     "production": "export ENV=production && npm run start"
   },
@@ -18,6 +20,7 @@
     "vue": "^2.5.2",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-google-autocomplete": "^1.1.0",
+    "vue-google-oauth2": "^1.1.0",
     "vue-google-signin-button": "^1.0.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.1",
@@ -29,10 +32,10 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-imports": "^1.4.1",
+    "babel-plugin-transform-imports": "^1.5.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
