--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.5.7",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-google-autocomplete": "^1.1.0",
     "vue-google-oauth2": "^1.1.0",
@@ -53,6 +55,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
