--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.5.7",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-google-autocomplete": "^1.1.0",
     "vue-google-oauth2": "^1.1.0",
@@ -26,7 +28,8 @@
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.1",
     "vuetify-google-autocomplete": "^2.0.0-beta.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -58,7 +61,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
+    "karma": "^3.1.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -67,7 +70,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
-    "mocha": "^3.2.0",
+    "mocha": "^5.2.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -85,13 +88,14 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-cli": "^2.0.10",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
