--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.5.7",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-google-autocomplete": "^1.1.0",
     "vue-google-oauth2": "^1.1.0",
@@ -46,13 +48,15 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.11",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.3.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.0.0-beta.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
