--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-google-oauth2": "^1.1.0",
     "vue-google-signin-button": "^1.0.2",
     "vue-router": "^3.0.1",
+    "vuejs-logger": "^1.5.3",
     "vuetify": "^1.3.1",
     "vuetify-google-autocomplete": "^2.0.0-beta.5",
     "vuex": "^3.0.1",
